LIST OF CHANGES

release 85.4
 - Run/instrument tracking; added full support for HiSeq 4000 and limited support
   for NextSeq and MiniSeq
 - Add HiSeq 4000 to graphical instrument list
 - Limit menu for changing run status, when not analyst, to those on instrument
 - Composition framework - the composition object becomes immutable as long
   as its components are immutable.
     - Functionality for an incremental assembly of a composition moved to 
       a generic composition factory.
     - Empty compositions are not allowed.
     - Composition constructor returns a sorted composition.
     - Public sort function is removed.
 - Composition - find is implemented as a binary search.

release 85.3
 - Add deployment to GitHub Releases
 - In order to have correctly versioned files in a distribution,
     changed the builder base class.
 - Travis conf update to pre-load perl-dnap-utilities from github.
 - Samplesheet daemon:
     fixed logger;
     changed reference repository root so that it can be run on a staging host.
 - Changes to handle a different number of tiles in each lane
 - Increased TAG_INDEX_MAX to 9999 to handle pools with >999 samples

release 85.2
 - Added 'sample_accession_numbers' to lims shim
 - Deprecated old accessors for qc outcomes.

release 85.1
 - Added 'purpose' to lims shim
 - utf8 option for test sqlite db
 
release 85.0
 - lims shim
   - endeavours to ensure consistency of primary info (e.g. id_run, position)
     with drivers
   - will pass through arguments to driver constructor if it takes them

release 84.12 
 - composition and component serialization to rpt 

release 84.11
 - Operations (inflation and deflation) on rpt strings and their hash
   representation and lists of rpt values (based on npg_qc::autoqc::role::rpt_key)
 - Factory to create composition from a string representation of an rpt list
 - New filename method for the illumina component
 - Alter "run complete" email alert text to make clear analysis and qc time
