@@ -1,10 +1,10 @@
-[% labels    = ['current status', 'utilisation', 'formats'] -%]
-[% addresses = ['instrument/graphical', 'instrument_utilisation', 'instrument_format'] -%]
-[% counts    = [0, 1, 3] -%]
+[% labels    = ['current status', 'formats'] -%]
+[% addresses = ['instrument/graphical', 'instrument_format'] -%]
+[% counts    = [0, 2] -%]
 [% IF requestor.is_member_of('engineers') || requestor.is_member_of('loaders') || requestor.is_member_of('annotators');
      labels.push( 'make batch change');
      addresses.push( 'instrument/edit_statuses');
-     counts.push( 2);
+     counts.push(1);
    END
 -%]
 <p class="npgmenu1">
