@@ -1,34 +1,0 @@
-
-[% PROCESS instrument_utilisation_menu.tt2 
-           group_index=0
-           index=0
-%]
-
-
-<table id="accepted" class="sortable zebra">
-  <caption>Accepted Instrument Utilisation and Uptime</caption>
-  <thead>
-    <tr><th>Date</th><th>No. of Instruments</th><th>Perc. Utilisation</th><th>Perc. Uptime</th></tr>
-  </thead>
-  <tbody>[% FOREACH row = model.table_data_total_insts(30, instrument) %]
-    <tr>[% FOREACH field = row %]<td>[% field %]</td>[% END %]</tr>[% END %]
-  </tbody>
-</table>
-<table id="not_hot_spare" class="sortable zebra">
-  <caption>Non-HotSpare Instrument Utilisation and Uptime</caption>
-  <thead>
-    <tr><th>Date</th><th>No. of Instruments</th><th>Perc. Utilisation</th><th>Perc. Uptime</th></tr>
-  </thead>
-  <tbody>[% FOREACH row = model.table_data_official_insts(30, instrument) %]
-    <tr>[% FOREACH field = row %]<td>[% field %]</td>[% END %]</tr>[% END %]
-  </tbody>
-</table>
-<table id="production" class="sortable zebra">
-  <caption>Production Instrument Utilisation and Uptime</caption>
-  <thead>
-    <tr><th>Date</th><th>No. of Instruments</th><th>Perc. Utilisation</th><th>Perc. Uptime</th></tr>
-  </thead>
-  <tbody>[% FOREACH row = model.table_data_prod_insts(30, instrument) %]
-    <tr>[% FOREACH field = row %]<td>[% field %]</td>[% END %]</tr>[% END %]
-  </tbody>
-</table>
