@@ -1,39 +1,0 @@
-[% PROCESS instrument_top.tt2
-           top_menu_index=1
--%]
-[% IF model.instrument_model %][% SET instrument = model.instrument_model %][% ELSE %][% instrument = 'HiSeq' %][% END %]
-[% formats  = ['HiSeq', 'HiSeqX', 'MiSeq'] -%]
-[% labels    = ['text', 'bar', 'line', 'text', 'line'] -%]
-[% addresses = ['instrument_utilisation/', 'instrument_utilisation/graphical', 'instrument_utilisation/graphical/line', 'instrument_utilisation/text90', 'instrument_utilisation/graphical/line90'] -%]
-[% counts    = [0, 1, 2, 3, 4] -%]
-[% FOREACH format IN formats -%]
-  <p class="npgmenu2">
-  [% format %] :
-  [% FOREACH count IN counts -%]
-    [% IF count == 0 -%]
-      [% IF group_index == 0 && instrument == format -%]
-        <font class="npgmenu2-highlighted">
-      [% END -%] 
-      last 30 days&nbsp;
-      [% IF group_index == 0 && instrument == format -%]
-        </font>
-      [% END -%]
-    [% ELSIF count == 3 -%]
-      &nbsp|&nbsp;
-      [% IF group_index == 1 && instrument == format -%]
-        <font class="npgmenu2-highlighted">
-      [% END -%] 
-      last 90 days&nbsp; 
-      [% IF group_index == 1 && instrument == format -%]
-        </font>
-      [% END -%]
-    [% END -%]
-    [% IF count == index && instrument == format -%]
-      <font class="npgmenu2-highlighted">[% labels.$count %]</font>
-    [% ELSE -%]
-      <a href="[% SCRIPT_NAME %]/[% addresses.$count %]?inst_format=[% format %]">[% labels.$count %]</a>
-    [% END -%]
-  [% END -%]
-  </p>
-[% END -%]
-
