@@ -1,7 +1,6 @@
 <p class="npgmenu1">
 <font class="npgmenu1-highlighted">Instruments:</font>
 <a href="/cgi-bin/npg/instrument/graphical">current status</a>
- | <a href="/cgi-bin/npg/instrument_utilisation">utilisation</a>
  | <a href="/cgi-bin/npg/instrument_format">formats</a>
  |  <font class="npgmenu1-highlighted">
 <a href="/cgi-bin/npg/instrument/edit_statuses">make batch change</a>
