@@ -3,7 +3,6 @@
  <font class="npgmenu1-highlighted">
 <a href="/cgi-bin/npg/instrument/graphical">current status</a>
  </font>
- | <a href="/cgi-bin/npg/instrument_utilisation">utilisation</a>
  | <a href="/cgi-bin/npg/instrument_format">formats</a>
 </p>
 
