@@ -1,20 +1,0 @@
-<p class="npgmenu1">
-<font class="npgmenu1-highlighted">Instruments:</font>
-<a href="/cgi-bin/npg/instrument/graphical">current status</a>
- |  <font class="npgmenu1-highlighted">  
-<a href="/cgi-bin/npg/instrument_utilisation">utilisation</a>
- </font>  
- | <a href="/cgi-bin/npg/instrument_format">formats</a>
-</p>
-
-  <p class="npgmenu2">
-  HiSeq :
-                  last 30 days&nbsp;
-                    <a href="/cgi-bin/npg/instrument_utilisation/?inst_format=HiSeq">text</a>
-                    <a href="/cgi-bin/npg/instrument_utilisation/graphical?inst_format=HiSeq">bar</a>
-                    <a href="/cgi-bin/npg/instrument_utilisation/graphical/line?inst_format=HiSeq">line</a>
-                &nbsp|&nbsp;
-            <font class="npgmenu2-highlighted">last 90 days&nbsp;</font> 
-                    <font class="npgmenu2-highlighted">text</font> 
-                    <a href="/cgi-bin/npg/instrument_utilisation/graphical/line90?inst_format=HiSeq">line</a>
-        </p>
